--- a/package.json
+++ b/package.json
@@ -23,8 +23,12 @@
     "gulp-imagemin": "^7.1.0",
     "gulp-newer": "^1.4.0",
     "gulp-sass": "^4.1.0",
+    "gulp-ttf2woff": "^1.1.1",
+    "gulp-ttf2woff2": "^3.0.0",
     "gulp-uglify-es": "^2.0.0",
     "jquery": "^3.5.1"
   },
-  "dependencies": {}
+  "dependencies": {
+    "gulp-fonter": "^0.3.0"
+  }
 }
