--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "html-dev-compile": "html-includes --src ./app/html/ --dest ./app/",
+    "html-prod-compile": "html-includes --src ./app/html/ --dest ./dist/"
   },
   "keywords": [],
   "author": "",
@@ -26,9 +27,11 @@
     "gulp-ttf2woff": "^1.1.1",
     "gulp-ttf2woff2": "^3.0.0",
     "gulp-uglify-es": "^2.0.0",
+    "html-includes": "^4.4.1",
     "jquery": "^3.5.1"
   },
   "dependencies": {
-    "gulp-fonter": "^0.3.0"
+    "gulp-fonter": "^0.3.0",
+    "gulp-rename": "^2.0.0"
   }
 }
